--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,18 @@ body {
 
 .app {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   min-height: 100vh;
 }
-
+.btnWrapper{
+  width: 100%;
+  max-width: 1440px;
+  display: flex;
+  justify-content: end;
+}
 .items-container {
   display: flex;
   justify-content: center;
@@ -53,4 +59,58 @@ body {
   .card {
     width: 100%;
   }
+}
+
+/* Overall container styling */
+.search-form {
+  max-width: 500px;
+  margin: 60px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Heading styles */
+h2 {
+  text-align: center;
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+/* Search form styling */
+.search-form label {
+  display: block;
+  font-weight: 600;
+  margin-bottom: 8px;
+  color: #555;
+}
+
+.search-form input[type="text"], .search-form input[type="date"] {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.search-form button {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.search-form button:hover {
+  background-color: #0056b3;
+}
+
+.s-date {
+  font-size: 12px;
 }
